[package]
name = "adventofcode2015"
version = "0.1.0"
authors = ["MarcusTL12 <marcuspaafjellet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
num = "0.4"
md5 = "0.7"
lazy_static = "1.4"
regex = "1.5"
serde_json = "1.0"
divisors = "0.2"
priority-queue = "1.2"
arrayvec = "0.7"
mod_exp = "1.0"
rayon = "1.5"
